# rx-int

./: LICENSE  README.md
client/: CMakeLists.txt
client/dummy/: CMakeLists.txt  dummy_payload.cpp  dummy_target.cpp
client/src/: Common.hpp  Driver.cpp  Driver.hpp  Injector.cpp  Injector.hpp  Ioctl.hpp  TUI.cpp  TUI.hpp  Wrappers.hpp  main.cpp
driver/: .gitignore  Callbacks.cpp  Callbacks.hpp  Common.hpp  Detector.cpp  Detector.hpp  Driver.cpp  ExportResolver.cpp  ExportResolver.hpp  Ioctl.hpp  Memory.cpp  Memory.hpp  Reconstructor.cpp  Reconstructor.hpp  Wrappers.hpp  import.h  rx-int.inf  rx-int.sln  rx-int.vcxproj  rx-int.vcxproj.filters  rxint.c  rxint.h  xxhash.h
injector_testcases/: inject_shellcode.c  vad_test.c
paper/: .gitignore  architecture.md  references.bib  rxint.tex
paper/figures/: dump_report.json  scan_report.json
